[project]
name = "fastapi-logging"
version = "0.1.0"
description = "Add your description here"
authors = ["Rafael Henrique <rafael@rah.com.br>"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.10",
    "fastapi>=0.115.4",
    "setuptools>=75.5.0",
    "uplink>=0.9.7",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
